# TaichiAotByExamples

./: .gitignore  CMakeLists.txt  README.md
01-runtime/: CMakeLists.txt  main.cpp
01-version/: main.cpp
02-arch/: CMakeLists.txt  main.cpp
03-runtime/: main.cpp
04-memory/: main.cpp
05-ndarray/: main.cpp
06-device-command/: main.cpp
07-aot-module/: main.cpp
07-aot-module/assets/: module.py
08-kernel/: CMakeLists.txt  main.cpp
08-kernel/assets/: module.py
09-error/: main.cpp
10-texture/: CMakeLists.txt  main.cpp
10-texture/assets/: module.py
cmake/: FindTaichi.cmake
mdbook/: README.md  book.toml
mdbook/src/: SUMMARY.md
mdbook/src/examples/: 01-version.md  02-arch.md  03-runtime.md  04-memory.md  05-ndarray.md  06-device-command.md  07-aot-module.md  08-kernel.md  09-error.md  10-texture.md
scripts/: Publish-GithubPages.ps1  Test-AllExamples.ps1  extract-mdbook.py
